src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Testing__c</fullName>
        <label>Acceptance Testing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Services Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Software and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Software Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <formula>Account.USD_SUM_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total lifetime value of the customer</inlineHelpText>
        <label>Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Renews__c</fullName>
        <label>Auto-Renews?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_of_Control_Effects__c</fullName>
        <label>Change of Control Effects</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notice of change of control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination on change of control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_to_Support_SLA_Terms__c</fullName>
        <inlineHelpText>Paste language from contract</inlineHelpText>
        <label>Change to Support/SLA Terms</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Changes_to_Error_Definitions__c</fullName>
        <description>Changes to error priority level definitions in support exhibit</description>
        <inlineHelpText>Changes to error priority level definitions in support exhibit</inlineHelpText>
        <label>Changes to Error Definitions</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes_to_Support_Response_Time__c</fullName>
        <inlineHelpText>In support exhibit table</inlineHelpText>
        <label>Changes to Support Response Time</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <inlineHelpText>Select if the contract is monthly or if it auto-renews</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Renew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Data_Security_Requirements__c</fullName>
        <label>Custom Data Security Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Price_Lock_Terms__c</fullName>
        <label>Custom Price Lock Terms</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Collection__c</fullName>
        <label>Data Collection</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Final_Agreement_Signed__c</fullName>
        <inlineHelpText>The date when both parties have signed the agreement set forth for the customer</inlineHelpText>
        <label>Date Final Agreement Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initial_Paper_Recieved__c</fullName>
        <inlineHelpText>When was the first contract information received by the legal department</inlineHelpText>
        <label>Date Initial Paper Recieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_for_AppD_to_Return_Markup__c</fullName>
        <formula>Time_AppD_Legal_Sent_First_Markup__c -  Time_Contract_Received_by_AppD_Legal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days for AppD to Return Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_for_Customer_to_Return_Markup__c</fullName>
        <formula>Time_AppD_Legal_Receives_Return_Markup__c -  Time_AppD_Legal_Sent_First_Markup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days for Customer to Return Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Describe_Error_Definition_Change__c</fullName>
        <label>Describe Error Definition Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disaster_Recovery_Plan__c</fullName>
        <inlineHelpText>Is a disaster recovery or business continuity plan included in contract?</inlineHelpText>
        <label>Disaster Recovery Plan</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Policy__c</fullName>
        <label>Expense Policy</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_Account__c</fullName>
        <label>Federal Account</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Requirements__c</fullName>
        <label>Insurance Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFN_Pricing_Language__c</fullName>
        <inlineHelpText>Required if MFN Pricing field = Yes</inlineHelpText>
        <label>MFN Pricing Language</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MFN_Pricing__c</fullName>
        <inlineHelpText>AppDynamics agreed customer will have the best pricing as compared to other customers.</inlineHelpText>
        <label>MFN Pricing</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Terms__c</fullName>
        <label>Marketing Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <label>Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed Logo Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>More_Insurance_Requirements__c</fullName>
        <label>More Insurance Requirements</label>
        <picklist>
            <controllingField>Insurance_Requirements__c</controllingField>
            <picklistValues>
                <fullName>Add as additional insured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notify of cancellation or changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide annual certificate</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Non_Solicit_Imposed_on_AppDynamics__c</fullName>
        <label>Non-Solicit Imposed on AppDynamics</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Deadline__c</fullName>
        <inlineHelpText>When do we need to opt-out of a contract</inlineHelpText>
        <label>Opt-Out Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orders_by_Customer_Affiliates__c</fullName>
        <inlineHelpText>Customer affiliates can submit order forms in their own name referencing this master agreement</inlineHelpText>
        <label>Orders by Customer Affiliates</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - No Price Lock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Custom Price Lock</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Critical_Terms__c</fullName>
        <label>Other Critical Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Overridding_Order_Terms__c</fullName>
        <inlineHelpText>Please describe the custom terms that can be overridden</inlineHelpText>
        <label>Overridding Order Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Paper__c</fullName>
        <label>Paper</label>
        <picklist>
            <picklistValues>
                <fullName>AppDynamics EULA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Paper</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Lock_In_Agreement_Language__c</fullName>
        <inlineHelpText>Required if Price Lock In Agreement field = Yes.</inlineHelpText>
        <label>Price Lock In Agreement Language</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_Lock_In_Agreement__c</fullName>
        <inlineHelpText>Price lock located in agreement itself</inlineHelpText>
        <label>Price Lock In Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release_Conditions__c</fullName>
        <label>Release Conditions</label>
        <picklist>
            <controllingField>Source_Code_Escrow__c</controllingField>
            <picklistValues>
                <fullName>Bankruptcy Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signing_AppDynamics_Entity__c</fullName>
        <label>Signing AppDynamics Entity</label>
        <picklist>
            <picklistValues>
                <fullName>AppDynamics, Inc.</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics International Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Code_Escrow_Terms__c</fullName>
        <inlineHelpText>Please explain the custom escrow terms</inlineHelpText>
        <label>Source Code Escrow Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Code_Escrow__c</fullName>
        <label>Source Code Escrow</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support</label>
        <picklist>
            <picklistValues>
                <fullName>Enterpise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Right_for_SaaS_Downtime__c</fullName>
        <label>Termination Right for SaaS Downtime</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_for_Convenience__c</fullName>
        <label>Termination for Convenience</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <inlineHelpText>Terms of permitted limited of use by customer affiliates</inlineHelpText>
        <label>Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_that_the_Order_Form_can_Override__c</fullName>
        <label>Terms that the Order Form can Override</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Period__c</fullName>
        <description>How long with the customer test the software before they cancel their subscription without paying?</description>
        <label>Test Period</label>
        <picklist>
            <controllingField>Acceptance_Testing__c</controllingField>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Period_Days__c</fullName>
        <inlineHelpText>If Testing Period is &quot;Custom,&quot; How many days of testing does the customer have?</inlineHelpText>
        <label>Testing Period Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_AppD_Legal_Receives_Return_Markup__c</fullName>
        <label>Time AppD Legal Receives Return Markup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_AppD_Legal_Sent_First_Markup__c</fullName>
        <label>Time AppD Legal Sent First Markup</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Contract_Received_by_AppD_Legal__c</fullName>
        <label>Time Contract Received by AppD Legal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_in_Days__c</fullName>
        <formula>Date_Final_Agreement_Signed__c  -  Date_Initial_Paper_Recieved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_and_Expenses__c</fullName>
        <label>Travel and Expenses</label>
        <picklist>
            <picklistValues>
                <fullName>No pre-approval required (Default)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract is Silent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-approval for all expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-approval if greater than threshold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_by_Customer_Affliates__c</fullName>
        <label>Use by Customer Affliates</label>
        <picklist>
            <picklistValues>
                <fullName>Not permitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitted Worldwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permitted Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_of_Subcontractors__c</fullName>
        <label>Use of Subcontractors</label>
        <picklist>
            <picklistValues>
                <fullName>No Restrictions (Standard)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Notice to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires Consent of Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>W_F_Fired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W/F Fired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wf_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>wf email sent</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Pascal</value>
        </filters>
        <label>Pascal</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>Manage_Conracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTRACT.ACTIVATED_BY</columns>
        <filterScope>Everything</filterScope>
        <label>Manage Conracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Contracts</fullName>
        <active>true</active>
        <description>Customer Contracts (Old Data)</description>
        <label>Customer Contracts</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>true</active>
        <label>NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Contract</fullName>
        <active>true</active>
        <description>Vendor Contracts</description>
        <label>Vendor Contract</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Custom_Price_Lock_Terms</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Orders_by_Customer_Affiliates__c , &apos;Yes - Custom Price Lock&apos;), ISBLANK(Custom_Price_Lock_Terms__c))</errorConditionFormula>
        <errorDisplayField>Custom_Price_Lock_Terms__c</errorDisplayField>
        <errorMessage>Please Fill out the Customer Terms</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_Source_Code_Escrow</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Release_Conditions__c , &apos;Custom&apos;) , ISBLANK( Source_Code_Escrow_Terms__c))</errorConditionFormula>
        <errorDisplayField>Source_Code_Escrow_Terms__c</errorDisplayField>
        <errorMessage>You must explain the custom source code escrow</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Custom_Testing_Period</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Test_Period__c, &apos;Custom&apos;),  ISNULL( Testing_Period_Days__c ))</errorConditionFormula>
        <errorDisplayField>Testing_Period_Days__c</errorDisplayField>
        <errorMessage>You must specify number of days the test period is</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MFN_Pricing_Language_Required</fullName>
        <active>true</active>
        <description>If MFN_Pricing__c = Yes, then MFN_Pricing_Language__c can not = NULL.</description>
        <errorConditionFormula>AND(
ISPICKVAL( MFN_Pricing__c, &quot;Yes&quot;),
ISBLANK(MFN_Pricing_Language__c))</errorConditionFormula>
        <errorDisplayField>MFN_Pricing_Language__c</errorDisplayField>
        <errorMessage>Update field with MFN Pricing Language.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Marketing_Terms</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Marketing__c, &apos;Custom&apos;), ISBLANK(Marketing_Terms__c ))</errorConditionFormula>
        <errorDisplayField>Marketing_Terms__c</errorDisplayField>
        <errorMessage>What are the custom marketing terms the customer requests</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Please_Describe_the_Error_Definition</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Changes_to_Error_Definitions__c , &apos;Yes&apos;),  ISBLANK(  Describe_Error_Definition_Change__c ))</errorConditionFormula>
        <errorDisplayField>Describe_Error_Definition_Change__c</errorDisplayField>
        <errorMessage>Please describe the change</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_Lock_In_Agreement_Language_Require</fullName>
        <active>true</active>
        <description>If Price_Lock_In_Agreement__c = Yes, then Price_Lock_In_Agreement_Language__c can not = NULL.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Price_Lock_In_Agreement__c, &quot;Yes&quot;),
ISBLANK(Price_Lock_In_Agreement_Language__c))</errorConditionFormula>
        <errorDisplayField>Price_Lock_In_Agreement_Language__c</errorDisplayField>
        <errorMessage>Update field with Price Lock In Agreement Language.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Use_by_Customer_Affiliates</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Use_by_Customer_Affliates__c, &apos;Permitted Limited&apos;), ISBLANK (Terms__c))</errorConditionFormula>
        <errorDisplayField>Terms__c</errorDisplayField>
        <errorMessage>You must enter the permissions that are limited</errorMessage>
    </validationRules>
</CustomObject>